[metadata]
name = cyborg-tempest-plugin
summary = This is a cyorg tempest plugin package. Tests can be run as a tempest plugin against any cyborg-enabled OpenStack cloud.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    cyborg_tempest_plugin

[entry_points]
tempest.test_plugins =
    plugin_name = cyborg_tempest_plugin.plugin:CyborgTempestPlugin
